applications/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools-service
  namespace: it-tools
  labels:
    app: it-tools
  annotations:
    argocd.argoproj.io/sync-wave: "101"
spec:
  selector:
    app: it-tools
  ports:
    - protocol: TCP
      port: 80 # The port exposed by the Service
      targetPort: 80 # The port your container is listening on
  type: ClusterIP # Use NodePort or LoadBalancer if you want external access
